--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "magento/module-review-sample-data": "100.1.*",
         "magento/module-swatches-sample-data": "100.1.*",
         "magento/sample-data-media": "100.1.*",
-        "magento/module-offline-shipping-sample-data": "100.1.*"
+        "magento/module-offline-shipping-sample-data": "100.1.*",
+        "algolia/algoliasearch-magento-2": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.0",
